using clj-style instead of cssgen